--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.17.0'
+    
     // Database
     runtimeOnly 'com.h2database:h2'
     
@@ -35,6 +39,8 @@ dependencies {
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'it.ozimov:embedded-redis:0.7.3'
+    testImplementation 'org.testcontainers:testcontainers:1.17.6'
 }
 
 tasks.named('test') {
